opam-version: "1.2"
maintainer: "hugo.heuzard@gmail.com"
authors: [ "Hugo Heuzard" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/hhugo/odate"
build: [
  ["dune" "build" "--only" "odate" "--root" "." "-j" jobs "@install"]
]
depends: [
  "dune" {build}
  "menhir" {build}
  "base-unix"
]
dev-repo: "git://github.com/hhugo/odate"
available: [ ocaml-version >= "4.00.0" ]

