opam-version: "2.0"
maintainer: "hugo.heuzard@gmail.com"
authors: [ "Hugo Heuzard" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/hhugo/odate"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
  "menhir" {build}
  "base-unix"
  "ppx_expect" {with-test}
]
synopsis: "Date & Duration Library"
description: """
Simple date and duration manipulation. Also implement duration printer
based on string format. Already implemented in opalang
[http://opalang.org/]. For documentation about the format, see :
[http://doc.opalang.org/value/stdlib.core.date/Duration/try_generate_printer].
"""
dev-repo: "git://github.com/hhugo/odate"
