opam-version: "2.0"
maintainer: "hugo.heuzard@gmail.com"
authors: [ "Hugo Heuzard" ]
license: "MIT"
homepage: "https://github.com/hhugo/odate"
bug-reports:  "https://github.com/hhugo/odate/issues"
dev-repo: "git+https://github.com/hhugo/odate.git"

synopsis: "Date & Duration Library"

description: """
Simple date and duration manipulation. Also implement duration printer
based on string format. Already implemented in opalang
[http://opalang.org/]. For documentation about the format, see :
[http://doc.opalang.org/value/stdlib.core.date/Duration/try_generate_printer].
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
  "menhir" {build}
  "base-unix"
  "ppx_expect" {with-test}
]
